* 0.30.0

- Value::Error now carries an inner Value instead of an inner ArcStr, allowing
structured error types to be published (mostly for Graphix).
Value::Error(Value::String(..)) is special cased to encoded exactly the same as
it used to in previous versions, so this change is both backwards and forwards
compatible with old code as long as you stick to string errors.

- add Value::Map using a pooled immutable chunkmap. This is mostly for Graphix,
but it's generally useful to have a Value => Value map type that can be
published. Value is forward compatible with previous versions, any value
published by old code will be understood by new code. Value::Map can't be
published to old code, if it is the old Subscriber will fail to read the
Value::Map and gracefully disconnect from the publisher.

- shrink Value to 2 machine words. This is accomplished by boxing DateTime,
Duration, and Decimal, which aren't used often. For the common case of
publishing normal numbers this is worth 5% additional throughput, and for
Graphix it will likely be even more important. This didn't change the wire
encoding of Value at all.

- move memory pooling code (pool module) to a separate (and enhanced) crate
called poolshark

- additional hardening of collection pack implementations to prevent a remote
attacker from being able to trigger fairly large memory allocations in some
cases

* 0.29.2

- use const generics for read_raw so that we can support larger kerberos tokens (up to 64K)

* 0.29.1

- Work in progress version of the tui browser added to netidx-tools

* 0.29.0

- remove the escaping functions from utils and publish them as a separate (and
  enhanced) crate

* 0.28.3

- update deps

- remove all uses of lazy_static from the tree

- split Value out of netidx-netproto into it's own crate
  - it was getting big, so this improves compile times
  - it's useful for external projects that aren't very netidx related

- split bscript into a separate project called graphix (different